--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "helmet": "^5.0.2",
+    "json2csv": "^5.0.7",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +43,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/json2csv": "^5.0.3",
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.13",
     "@types/supertest": "^2.0.11",
